--- a/README
+++ b/README
@@ -12,3 +12,14 @@ Slicer Execution Model: https://github.com/Slicer/SlicerExecutionModel
 
 Optionnal:
 Slicer 4.1.0: http://www.slicer.org/
+
+ITK Necessary build options:
+
+ITK must be build with at least the following options:
+Module_ITKVtkGlue = True #For ITK/VTK compatibility
+(cf. http://www.itk.org/Wiki/ITK/FAQ#Do_I_need_VTK_to_build_ITK_.3F)
+
+VTK Necessary build options:
+
+VTK must be build with at least the follwing options:
+USE_ANSI_STDLIB = True #For VTK/ITK compatibility
